remove frame_scale from movementX/Y

The pointerlock spec defines MovementX/Y follow the scale of
screenX/Y, which is not scaled by pinch-zoom scale.
https://w3c.github.io/pointerlock/#dom-mouseevent-movementx
Although currently in chrome, it is movement is in physical
pixel, it should still be unscaled value. We should not apply
frame_scale to movement_x/y.

Note that right now WebMouseEvent::MovementInRootFrame is not used
anywhere other than test. we only scales the touch PointerEvent
but not mouse event.

This CL removes unused WebMouseEvent::MovementInRootFrame, and also
makes touch pointer event movementX/Y not scaled by pinch zoom.

Bug: 837004
Change-Id: I4bb39b3b01ecbd77c58fd4501a5c63ccb44e5a5b
Reviewed-on: https://chromium-review.googlesource.com/c/1313280
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Reviewed-by: Mustaq Ahmed <mustaq@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Ella Ge <eirage@chromium.org>
Cr-Commit-Position: refs/heads/master@{#605901}
Former-commit-id: 733e8096c00900e0051c42701760bdc374451b6b